[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Customize/shirt.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Customize/box.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Customize/update_color.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Customize/hat.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Customize/boots.png" type="Texture" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.163743, 0.339181, 0.532164, 0.783626, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 0, 0, 1, 0, 0.132813, 1, 1, 0.0546875, 1, 0, 1, 0.976563, 0.892639, 0, 1, 1, 1, 1, 1 )

[node name="Build" type="Node2D"]
position = Vector2( 0.629944, 0 )

[node name="box" type="Sprite" parent="."]
position = Vector2( 187.846, 232.806 )
texture = ExtResource( 2 )
script = ExtResource( 3 )
colors_map = SubResource( 1 )

[node name="top" type="Sprite" parent="box"]
position = Vector2( 2.20694, -106.985 )
scale = Vector2( 0.39733, 0.396152 )
texture = ExtResource( 4 )

[node name="topHSlider" type="HSlider" parent="box"]
margin_left = 43.6847
margin_top = -118.697
margin_right = 129.685
margin_bottom = -97.6966
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="low" type="Sprite" parent="box"]
position = Vector2( -14.488, 112.363 )
scale = Vector2( 0.429169, 0.350455 )
texture = ExtResource( 5 )

[node name="lowHSlider" type="HSlider" parent="box"]
margin_left = 39.167
margin_top = 98.7121
margin_right = 125.167
margin_bottom = 119.712
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mid" type="Sprite" parent="box"]
position = Vector2( 16.2656, -1.14378 )
scale = Vector2( 0.72027, 0.732348 )
texture = ExtResource( 1 )
offset = Vector2( -3.77551, -11.3265 )

[node name="midHSlider" type="HSlider" parent="box"]
margin_left = -130.301
margin_top = -1.19521
margin_right = -44.3014
margin_bottom = 19.8048
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="box/topHSlider" to="box" method="_on_topHSlider_value_changed"]
[connection signal="value_changed" from="box/lowHSlider" to="box" method="_on_lowHSlider_value_changed"]
[connection signal="value_changed" from="box/midHSlider" to="box" method="_on_midHSlider_value_changed"]
